[gd_scene load_steps=5 format=3 uid="uid://c3qlt4pa4qbji"]

[ext_resource type="PackedScene" uid="uid://n06gkookqeml" path="res://scenes/game/windows/Ads.tscn" id="1_2b68r"]
[ext_resource type="Script" path="res://scripts/ads/ads_operation.gd" id="2_jop1v"]
[ext_resource type="Texture2D" uid="uid://goinpjd4qxgd" path="res://ressources/assets/Operation/Operation.png" id="3_nc0f5"]
[ext_resource type="FontFile" uid="uid://dwgslonlru0ck" path="res://ressources/Battlenet.ttf" id="4_v65wu"]

[node name="Windows" instance=ExtResource("1_2b68r")]
script = ExtResource("2_jop1v")

[node name="Operation" type="Sprite2D" parent="." index="2"]
position = Vector2(250.5, 224)
scale = Vector2(0.400833, 0.35)
texture = ExtResource("3_nc0f5")

[node name="Question" type="Label" parent="." index="3"]
layout_mode = 0
offset_left = 82.0
offset_top = 144.0
offset_right = 385.0
offset_bottom = 249.0
theme_override_colors/font_color = Color(0.905882, 0.639216, 0.858824, 1)
theme_override_font_sizes/font_size = 76
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="4"]
layout_mode = 0
offset_left = 103.0
offset_top = 229.0
offset_right = 235.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 31

[node name="Button2" type="Button" parent="." index="5"]
layout_mode = 0
offset_left = 237.0
offset_top = 230.0
offset_right = 381.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 31

[node name="Label" type="Label" parent="." index="6"]
offset_left = 17.0
offset_top = 12.0
offset_right = 407.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("4_v65wu")
theme_override_font_sizes/font_size = 41
text = "Calculatrice.exe"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
